# calculator

./: CMakeLists.txt  main.cpp
debian/: control
engine/: evaluator.cpp
qml/: StandardButton.qml  StandardPad.qml  Zone.qml  main.qml  main.qml.bak2
